# pypaystack2

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  Taskfile.yml  documentation.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  vendor.yml  versions.json
.github/: FUNDING.yml
.github/workflows/: dev-ci.yml  doc-ci.yml  documentation-release.yml  publish-ci.yml  publish.yml  python-package.yml
3.1.0/: index.html  sitemap.xml
3.1.0/explanation/: index.html
3.1.0/reference/: index.html
_modules/pypaystack2/: baseapi.html
_sources/: pypaystack2.api.rst.txt
docs/: .buildinfo  genindex.html  how-to-guides.md  index.html  index.md  modules.html  objects.inv  py-modindex.html  pypaystack2.api.html  pypaystack2.html  reference.md  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  modules.rst.txt  pypaystack2.rst.txt  tutorial.rst.txt
docs/html/: genindex.html  index.html  modules.html  objects.inv  turorial.html  tutorial.html
docs/reference/: apple_pay.md  bulk_charges.md  charge.md  customer.md  dedicated_accounts.md  direct_debits.md  disputes.md  index.md  integration.md  miscellaneous.md  orders.md  payment_pages.md  payment_requests.md  plans.md  preauthorizations.md  products.md  refunds.md  settlements.md  splits.md  storefronts.md  subaccounts.md  subscriptions.md  terminals.md  transactions.md  transfer_recipients.md  transfers.md  transfers_control.md  verification.md  virtual_terminals.md
docs/source/: conf.py  index.rst  paystack-client-turorial.rst
docs/tutorials/: index.md  tutorial-00.md  tutorial1.md
explanation/: index.html
how-to-guides/: index.html
pypaystack2/: __init__.py  _metadata.py  apple_pay.py  baseapi.py  customers.py  errors.py  paystack.py  plans.py  splits.py  subaccounts.py  subscriptions.py  transactions.py  transfer_recipients.py  transfers.py  transfers_control.py  utils.py  version.py
pypaystack2/api/: __init__.py  apple_pay.py  bulk_charges.py  charge.py  control_panel.py  customers.py  dedicated_accounts.py  disputes.py  integration.py  invoices.py  miscellaneous.py  payment_pages.py  paystack.py  plans.py  products.py  refunds.py  settlements.py  splits.py  subaccounts.py  subscriptions.py  terminals.py  transactions.py  transfer_recipients.py  transfers.py  transfers_control.py  verification.py
pypaystack2/utils/: enums.py  helpers.py  (+1 more)
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  paystack-client-turorial.html  reference.md.bak  sitemap.xml
tests/: __init__.py  test_00_transaction.py  test_01_transactions_records.py  test_02_customer.py  test_03_customer_records.py  test_04_plan.py  test_05_plans_records.py  test_06_apple_pay.py  test_07_bulk_charges.py  test_09_control_panel.py  test_10_miscellaneous.py  test_11_products.py  test_12_subscriptions.py  test__metadata.py  test_baseapi.py  test_paystack.py  test_paystack_fees_calculation.py  test_pypaystack2.py  test_utils.py  test_version.py
tutorials/: index.html
v2.1/: 404.html  index.html  sitemap.xml
v3.0/: 404.html  index.html  sitemap.xml
v3.1/: 404.html  index.html  sitemap.xml
v3.2/: 404.html  index.html  objects.inv  sitemap.xml
v3.3/: objects.inv  sitemap.xml
(+484 files in other folders)
