[project]
name = "pypaystack2"
version = "2.1.1"
description = "A developer-friendly client library for Paystack"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
keywords = ["paystack-python", "pypaystack", "paystack", "paystackapi"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]


requires-python = ">= 3.9"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.39",
    "mkdocstrings[python]>=0.26.1",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "tomli>=2.0.1",
]

