[project]
name = "pypaystack2"
dynamic = ["version"]
description = "A developer-friendly client library for Paystack"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
keywords = ["paystack-python", "pypaystack", "paystack", "paystackapi"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]


requires-python = ">= 3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "./src/pypaystack2/_metadata.py"
attribute = "__version__"

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.39",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=1.14.1",
    "pre-commit>=4.3.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.6",
    "tomli>=2.0.1",
    "typer>=0.15.2",
]

[tool.mypy]
strict = true
mypy_path = "src"
files = ["src/pypaystack2", "tests"]
