[project]
name = "pypaystack2"
dynamic = ["version"]
description = "A developer-friendly client library for Paystack"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
keywords = ["paystack-python", "pypaystack", "paystack", "paystackapi"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]


requires-python = ">= 3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
pypaystack2 = "pypaystack2.cli:cli_app"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
webhook = [
    "fastapi[standard]>=0.123.10",
    "ngrok>=1.4.0",
    "python-dotenv>=1.2.1",
    "typer-slim[standard]>=0.20.0",
]
dev = [
    "pre-commit>=4.5.0",
    { include-group = "format" },
    { include-group = "test" },
    { include-group = "coverage" },
]
format = [
    "ruff>=0.14.8",
]
test = [
    "python-dotenv>=1.2.1",
    "tomli>=2.3.0",
    "typer-slim[standard]>=0.20.0",
]
coverage = []
doc = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]
